2000-11-30  Bernd Schmidt  <bernds@redhat.co.uk>

	1999-12-14  Bernd Schmidt  <bernds@cygnus.co.uk>
	* combine.c (combine_simplify_rtx): Don't make shared rtl.
	(simplify_logical): Likewise.

	Sat May 20 07:27:35 2000  Alexandre Oliva  <aoliva@cygnus.com>
	* fold-const.c (make_range): Handle degenerated intervals.
	Fixes c-torture/execute/991221-1.c

	2000-07-15  Michael Meissner  <meissner@redhat.com>
	* fold-const.c (fold): When optimizing FOO++ == CONST into ++FOO
	== CONST + INCREMENT, don't overwrite the tree node for FOO++,
	create a new node instead.

	2000-01-01  Bernd Schmidt  <bernds@cygnus.co.uk>
	* expmed.c (emit_store_flag): Prevent losing a pending stack
	adjust the same way we prevent losing queued increments.

2000-10-27  Bernd Schmidt  <bernds@redhat.co.uk>

	* expr.c (expand_expr, case INDIRECT_REF): If the address is a
	PLUS, that does not prove the object is in a structure.

2000-08-25  David Edelsohn  <edelsohn@gnu.org>

	* collect2.c (use_import_list): Always return 0 (disable).

2000-07-07  Manfred Hollstein  <manfredh@redhat.com>

	* i386.md (exception_receiver): Add missing parameter in
	call to load_pic_register.

Fri May 26 10:30:02 2000  Richard Earnshaw (rearnsha@arm.com)

	* arm.md (negdi2): Add clobber of condition code register.

Wed May 24 00:25:45 2000  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	2000-05-22  Richard Henderson  <rth@cygnus.com>
	* function.c (thread_prologue_and_epilogue_insns): Make sure 
	existing line number notes appear after the prologue.

2000-05-16  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
 
	* sysv4.h (CPP_OS_LINUX_SPEC): Define __unix and __linux according
	to given options.

2000-05-14  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	* rs6000/rs6000.md (nonlocal_goto_receiver): Add length attribute.

Wed Apr 12 00:42:19 2000  Jeffrey A Law  (law@cygnus.com)

	2000-02-19  Richard Henderson  <rth@cygnus.com>
        * c-typeck.c (add_pending_init): Don't abort for multiple